Fri May  6 15:01:11 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/syck/rubyext.c (mktime_do): avoid buffer overrun, by
	  silently ignoring lesser significant digits.  Required buffer
	  length can be computable so you might at first think of
	  allocating enough memory space on the fly using alloca().  That
	  is a wrong idea because when using alloca there is always risk
	  of integer overflow.  A function that accepts outer-process
	  resources like this should not blindly trust its inputs.  In
	  this particular case we just want to generate miliseconds
	  resolution by strtod() so the string in question needs no more
	  length than what we originally have.  Ignoring lesser
	  significant digits should suffice I believe.

Fri May  6 14:25:53 2011  Tinco Andringa <mail@tinco.nl>

	* ext/syck/rubyext.c (mktime_do): YAML.load time correctly parse
	  usecs smaller than 1 fixes #4571

Thu May  5 17:36:31 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* eval.c (frame_func_id): store result of method_entry_of_iseq() to
	  cfp->me because method_entry_of_iseq() might become expensive.

Thu May  5 15:03:51 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* eval.c (frame_func_id): __method__ return different name from
	  methods defined by Module#define_method with a same block.
	  [ruby-core:35386] fixes #4606
	* eval (method_entry_of_iseq): new helper function. search control
	  frame stack for a method entry which has given iseq.
	* test/ruby/test_method.rb: add tests for #4696

Mon May  2 00:36:12 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/socket/init.c (rsock_connect): add to care EINTR. based
	  on a patch from Eric Wong at [ruby-core:35621][Bug #4555]

Sat Apr 30 03:25:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/io/wait/test_io_wait.rb: New. for testing ext/io/wait.
	  the patch was written by Eric Wong. [Feature #4531]

Thu Apr 28 15:32:53 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
